# SensorsClasses

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
includes/: ISensor.hpp  ParkSensor.hpp  SpeedSensor.hpp
sources/: ParkSensor.cpp  SpeedSensor.cpp
tests/: CMakeLists.txt  SpeedSensorTest.cpp
